[package]
name = "ncmd-rs"
description = "A NCM_Downloader write in rust"
documentation = "https://github.com/LGY07/LearnRust/tree/main/NCMD/"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["UrsusFeline <ursusfeline07@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
